postgre-deployment/postgres-sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-not-ha-service
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres
